--- a/templates/_pagination.html
+++ b/templates/_pagination.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load bootstrap4 %}
 {% bootstrap_css %}
-<div class="pagination">
+<div class="pagination justify-content-center">
     {% if page_obj.has_previous %}
         <a href="?{{ page_obj.previous_page_number.querystring }}" class="prev">&lsaquo;&lsaquo; {% trans "previous" %}</a>
     {% else %}
