--- a/templates/todolist_app/todo_list.html
+++ b/templates/todolist_app/todo_list.html
@@ -1,15 +1,46 @@
 {% load bootstrap4 %}
 {% bootstrap_css %}
-<h2>Todo List</h2>
+<h1><center>Todo List</center></h1>
+<form>
+    <div class="form-row">
+        <div class="input-group">
+            <input class="form-control py-2 border-right-0 border col-md-4" type="search" name="task_contains" placeholder="Task contains..." />
+            <span class="input-group-append">
+                <div class="input-group-text bg-transparent">
+                    <i class="fa fa-search"></i>
+                </div>
+            </span>
+        </div>
+        <div class="form-group col-md-1">
+            <label for="inputPriority">Priority</label>
+            <select id="inputPriority" class="form-control">
+            <option>...</option>
+            <option>Low</option>
+            <option>Medium</option>
+            <option>Hight</option>
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="gridCheck">
+            <label class="form-check-label" for="gridCheck">
+            Done
+            </label>
+        </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Search</button>
+</from>
 
-<ul class="list-group">
+<ul class="list-group justify-content-center">
 {% for todo in object_list %}
-    <li class="list-group-item list-group-item-action">
-    <h4>{{ todo.id }}:  {{ todo.tittle }} - {{ todo.done }}</h4> <br>
-    <a href="{% url 'todo_update' todo.id %}"><button type="button" class="btn btn-info">Edit</button></a>
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+    <h4>{{ todo.id }}:  {{ todo.tittle }} - {{ todo.done }}</h4> 
+   <div> <br> <a href="{% url 'todo_update' todo.id %}"><button type="button" class="btn btn-info">Edit</button></a>
     <a href="{% url 'todo_delete' todo.id%}"><button type="button" class="btn btn-outline-danger">X</button></a>
     <a href="{% url 'todo_asing' todo.id%}"><button type="button" class="btn btn-outline-success">Asing</button></a>
 
+    </div>
     </li>
 {% empty %}
     <li>No todo yet.</li>
