--- a/templates/todolist_app/todo_list.html
+++ b/templates/todolist_app/todo_list.html
@@ -1,19 +1,12 @@
 {% load bootstrap4 %}
 {% bootstrap_css %}
-<h1><center>Todo List</center></h1>
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'todolist/css/todo_list/todo_list.css' %}">
+<h1>To-Do list</h1>
 <form>
-    <div class="form-row">
-        <div class="input-group">
-            <input class="form-control py-2 border-right-0 border col-md-4" type="search" name="task_contains" placeholder="Task contains..." />
-            <span class="input-group-append">
-                <div class="input-group-text bg-transparent">
-                    <i class="fa fa-search"></i>
-                </div>
-            </span>
-        </div>
         <div class="form-group col-md-1">
-            <label for="inputPriority">Priority</label>
-            <select id="inputPriority" class="form-control">
+            <label for="priority">Priority</label>
+            <select id="priority" class="form-control">
             <option>...</option>
             <option>Low</option>
             <option>Medium</option>
@@ -21,37 +14,62 @@
             </select>
         </div>
     </div>
-    <div class="form-group">
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck">
-            <label class="form-check-label" for="gridCheck">
-            Done
-            </label>
-        </div>
-    </div>
-    <button type="submit" class="btn btn-primary">Search</button>
 </from>
-
-<ul class="list-group justify-content-center">
+<table class="table">
+    <thead class="thead-dark">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Name</th>
+          <th scope="col">Done</th>
+          <th scope="col">Priority</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
 {% for todo in object_list %}
-    <li class="list-group-item d-flex justify-content-between align-items-center">
-    <h4>{{ todo.id }}:  {{ todo.tittle }} - {{ todo.done }}</h4> 
-   <div> <br> <a href="{% url 'todo_update' todo.id %}"><button type="button" class="btn btn-info">Edit</button></a>
-    <a href="{% url 'todo_delete' todo.id%}"><button type="button" class="btn btn-outline-danger">X</button></a>
-    <a href="{% url 'todo_asing' todo.id%}"><button type="button" class="btn btn-outline-success">Asing</button></a>
+    <tbody> 
+        <tr>
+            {% if todo.done %}
+            <th><strike>{{ todo.id }} </strike></th>
+            <th><strike>{{ todo.tittle }}</strike></th>
+            <th>
+                    <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="defaultCheckedDisabled2" checked disabled>
+                    <label class="custom-control-label" for="defaultCheckedDisabled2"></label>
+                    </div>     
+            </th>
+            <th><strike>{{ todo.priority.name }}</strike></th>
+            <th> <a href="{% url 'todo_update' todo.id %}"><button type="button" class="btn btn-info">Edit</button></a>
+                <a href="{% url 'todo_delete' todo.id%}"><button type="button" class="btn btn-outline-danger">X</button></a>
+                <a href="{% url 'todo_asing' todo.id%}"><button type="button" class="btn btn-outline-success">Asing</button></a>
+            </th>
+            {% else %}
+            <th>{{ todo.id }} </th>
+            <th>{{ todo.tittle }}</th>
+            <th> <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="defaultUncheckedDisabled2" disabled>
+                    <label class="custom-control-label" for="defaultUncheckedDisabled2"></label>
+                    </div>      
+            </th>
+            <th>{{ todo.priority.name }}</th>
+            <th> <a href="{% url 'todo_update' todo.id %}"><button type="button" class="btn btn-info">Edit</button></a>
+                <a href="{% url 'todo_delete' todo.id%}"><button type="button" class="btn btn-outline-danger">X</button></a>
+                <a href="{% url 'todo_asing' todo.id%}"><button type="button" class="btn btn-outline-success">Asing</button></a>
+            </th>
+             {% endif %}
+           
+    </tbody>
 
-    </div>
-    </li>
 {% empty %}
     <li>No todo yet.</li>
 {% endfor %}
-
+</table>
 </ul>
 
 {% include "_pagination.html" %}
+<br>
 <a href="{% url 'todo_create' %}">
 <button type="button" class="btn btn-success">Crear</button>
 </a>
 <a href ="{% url 'todo_logout' %}"> 
-<span class="badge badge-danger">Logout</span>
+<button type="button" class='Logout'>Logout</button>
 </a>
