--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% load bootstrap4 %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'todolist/css/login/login.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'todolist/css/login.css' %}">
 <h1>Login</h1>
 <form class="form-signin" method="post">
   <div class="imgcontainer">
