--- a/templates/todolist_app/todo_list.html
+++ b/templates/todolist_app/todo_list.html
@@ -1,7 +1,7 @@
 {% load bootstrap4 %}
 {% bootstrap_css %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'todolist/css/todo_list/todo_list.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'todolist/css/todo_list.css' %}">
 <h1>To-Do list</h1>
 <form method="GET">
     <a class="mr-4">{{ filter.form}}</a>
