try to fix heroku

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,7 +4,7 @@
 <h1>Login</h1>
 <form class="form-signin" method="post">
   <div class="imgcontainer">
-    <img src="{% static 'todolist/img/avatar.png' %}" class="avatar">
+    <img src="{% static 'img/avatar.png' %}" class="avatar">
   </div>
   {% csrf_token %}
       {{ form.as_p }}
